# APIKeyScanner

./: .gitignore  Cargo.toml  README.md  Senior-OSINT.md  build-release.ps1  build.rs  install.sh  installer.iss
.github/workflows/: scan.yml
data/: latest.json
src/: cli.rs  config.rs  dorks.rs  gpu_filter.rs  launcher.rs  main.rs  patterns.rs  storage.rs  tui.rs  validator.rs
