[package]
name = "api-key-scanner"
version = "1.0.0"
edition = "2024"
authors = ["Security Research Team"]
description = "Fast GitHub API key scanner with Git automation"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "sync"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
regex = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flate2 = "1"
tar = "0.4"
futures = "0.3"
dotenv = "0.15"
sha2 = "0.10"
inquire = "0.9"
crossterm = "0.29"
toml = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
rayon = "1"
aho-corasick = "1"
[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dev]
split-debuginfo = "unpacked"
